test/bad/classes/inheritance05.px

class A def
    x: Int

class B: A def
    x: Int
